--- a/Founding-Participants.html
+++ b/Founding-Participants.html
@@ -24,8 +24,7 @@
 			
 					<nav id="nav">
 						<ul>
-							<li><a href="Home.html">Home</a></li>
-							
+                            <li><a href="index.html">Home</a></li>							
 							<li>
 										<a href="#">Faculty Leads<a>
 										<ul>
