--- a/Industry-Advisors.html
+++ b/Industry-Advisors.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Landed by HTML5 UP</title>
+		<title>The Industry Advisory Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 			
 					<nav id="nav">
 						<ul>
-							<li><a href="Home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							
 							<li>
 										<a href="#">Faculty Leads<a>
