--- a/Related-initiatives.html
+++ b/Related-initiatives.html
@@ -20,7 +20,7 @@
 			
 					<nav id="nav">
 						<ul>
-							<li><a href="Home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							
 							<li>
 										<a href="#">Faculty Leads<a>
