vision and index

--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 						<p>1) To play a leadership role in providing highly qualified talent to the burgeoning soft magnetics industry and the electric power industry more broadly.
 	<br>2) To serve as the primary convener for a unique and much needed university / industry / national lab community.
 	<br>3) To become the premier source of university technical support to industry (papers, patents, direct research support).</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -128,11 +126,15 @@
 					<div class="content">
 						<header>
 							<h2>Vision</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<p>Our vision is an innovation and educational ecosystem that includes:
+							<ol>
+<li>Foundational research with a diverse base of funding support spanning federal, private, foundation, and other resources.</li>
+<li> A range of existing and newly developed interdisciplinary educational programs as well as internship and coop opportunities for students.</li>
+<li>Direct support of industry research and workforce development needs in the form of publications, patents, talent, and fee-for-service.</li></p>
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="images/vision.png" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
