--- a/CMU-Faculty.html
+++ b/CMU-Faculty.html
@@ -66,10 +66,10 @@
 					<div class="container">
 						<header class="major">
 							<h2>Michael McHenry</h2>
-							<p>AMPED Faculty Director (CMU)<br> Professor, Materials Science & Engineering <br>
-							Principal Editor, Journal of Materials Science</p>
+							<p>AMPED Faculty Director (CMU)<br> Professor, Materials Science & Engineering 
+							</p>
 						</header>
-							<img style="WIDTH:250px; HEIGHT:250px" src="images/McHenry.jpg" alt="" class="center">
+							<img style="WIDTH:250px; HEIGHT:300px" src="images/McHenry.jpg" alt="" class="center">
 
 
 						<!-- Content -->
@@ -104,7 +104,7 @@
 							<p>AMPED Faculty Co-Director (CMU)<br> Professor, Mechanical Engineering
 							</p>
 						</header>
-													<img style="WIDTH:250px; HEIGHT:250px" src="images/deBoer.jpg" alt="" class="center">
+													<img style="WIDTH:300px; HEIGHT:250px" src="images/deBoer.jpg" alt="" class="center">
 
 						<section id="content">
 								
