BR_Change_REQUEST

--- a/PITT-Faculty.html
+++ b/PITT-Faculty.html
@@ -128,7 +128,7 @@
 								</ol>
 							</section>
 					<p><h4>Email:<a href="mailto:  bmg10@pitt.edu"> bmg10@pitt.edu</a> </h4></p>
-					<p><h4><a href="https://www.engineering.pitt.edu/BrandonGrainger/"> Department Website</a>/ <a href="https://www.researchgate.net/profile/Brandon_Grainger"> ResearchGate</a></h4></p>
+					<p><h4><a href="https://www.engineering.pitt.edu/BrandonGrainger/"> Department Website</a></h4></p>
 						  
 					</div>
 				</div>
