--- a/Amped-products.html
+++ b/Amped-products.html
@@ -77,25 +77,24 @@
 								, Journal of Alloys and Compounds  , A. Talaat, D. Greve, M.V. Suraj,  P. Ohodnicki, 2020.</i></h4>
 								<h4><a href="https://www.cambridge.org/core/journals/journal-of-materials-research/article/nanostructure-and-compositional-segregation-of-soft-magnetic-fenibased-nanocomposites-with-multiple-nanocrystalline-phases/BF103C689B255272D31C9D3633CEDE6D">“Nanostructure and Compositional Segregation of Soft Magnetic FeNi-Based Nanocomposites with Multiple Nanocrystalline Phases”</a><i>
 								, Journal of Materials Research, P. Ohodnicki, E.J. Kautz, A. Devaraj, Y. Yu, N. Aronhime, Y. Krimer, M. E. McHenry, A. Leary, 2020.</i></h4>
-								
+							
 								<h4><a href="https://www.mdpi.com/journal/energies/special_issues/Performance_Reliability_Wide_Bandgap_Semiconductor_Nano_Device_Based_Circuits_Energy_Systems">“Special Issue:  Performance and Reliability of Wide Bandgap Semiconductor and Nano Device Based Circuits for Energy Systems”</a><i>
 								,  Energies, January 2021, William Stanchina and Brandon Grainger.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/document/9123992">“Self-Synchronizing Current Control for Three-Phase Inverter in the Presence of Unknown Grid Parameters”</a><i>
 								, Proc. 2020 IEEE Applied Power Electronics Conference & Exposition (APEC), New Orleans, Louisiana, March 2020, Joseph Latham, Moath Alqatamin, Zachary Smith, Brandon M. Grainger and Michael McIntyre.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/abstract/document/9172360">“Evaluation of Point of Load Converters for Space Computational Loads”</a><i>
-								, Textbook Chapter, Under Development, R. Beddingfield, S. Bhattacharya, and P. Ohodnicki, 2020.</i></h4>
+								,Proc. 2020 IEEE Aerospace Conference, Big Sky, MT, 2020, Thomas Cook, Aiden Phillips, Christopher Siak, Alan George and Brandon M. Grainger.</i></h4>
 						        <h4><a href="https://ieeexplore.ieee.org/document/9236067">“Power Regulation of Solid-State Transformer Based Quad-Active Bridge DC-DC Converter using Adaptive Linear Quadratic Regulator and Nonlinear Model Predictive Control”</a><i>
 								, 2020 IEEE Energy Conversion Congress and Exposition (ECCE), Detroit, Michigan, USA, 2020, Mohammed Hatatah and Brandon Grainger.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/document/9236157">“Control of Boost Converter Module for Open-End Winding Permanent Magnet Motor Based Dual Inverter Drive”</a><i>
 								,  2020 IEEE Energy Conversion Congress and Exposition (ECCE), Detroit, Michigan, USA, 2020 , Ryan Brody and Brandon Grainger.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/document/9236215">“Preserving Converter Lifetime by Active Thermal Boundary Control”</a><i>
-								, 2020 IEEE Energy Conversion Congress and Exposition (ECCE), Detroit, Michigan, USA, 2020 (Accepted), Patrick Lewis and Brandon Grainger.</i></h4>
+								, 2020 IEEE Energy Conversion Congress and Exposition (ECCE), Detroit, Michigan, USA, 2020 , Patrick Lewis and Brandon Grainger.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/document/9146214">“Direct Torque Model Predictive Control of Five-Phase Permanent Magnet Synchronous Motors”</a><i>
 								, IEEE Transactions on Power Electronics, Bojian Cao, Brandon M. Grainger,  Xin Wang, Yu Zhou,Gregory F. Reed and Zhi-Hong Mao.</i></h4>
 								<h4><a href="https://ieeexplore.ieee.org/document/9112156">“Current Control of a Three-Phase, Grid-Connected Inverter in the Presence of Unknown Grid Parameters without Phase Lock Loops”</a><i>
 								, IEEE Transactions on Emerging and Selected Topics in Power Electronics , Moath Alqatamin, Joseph Latham, Zachary Smith, Brandon M. Grainger and Michael McIntyre.</i></h4>
-								<h4><a href="#">“Reduced Order AC Microgrid Model for Secondary Controller Design Using dq Reference Frame”</a><i>
-								, (Under Review)IEEE Access,, Hashim A. Al Hassan, Thamer Alharbi, Zhi-Hong Mao, and Brandon M. Grainger.</i></h4>
+
 							</section>
 
 					</div>
