--- a/NCSU-Faculty.html
+++ b/NCSU-Faculty.html
@@ -130,7 +130,7 @@
 						<li><a href="mailto: pro8@pitt.edu" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy;  All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Suraj Venkateshwaran Mullurkara</li>
+						<li>&copy;  All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> and Suraj M.V.</li>
 					</ul>
 				</footer>
 
