--- a/Founding-Participants.html
+++ b/Founding-Participants.html
@@ -207,7 +207,7 @@
 											<hr/>
 								</div>
 								<div class="col-4 col-12-medium">
-									  <img src="images/NNL.jpg" alt="" style="width:150%">
+									  <img src="images/NNL.png" alt="" style="width:150%">
 								</div>
 								
 							</div>
