new tab changes

--- a/Related-initiatives.html
+++ b/Related-initiatives.html
@@ -78,7 +78,7 @@
 								integrating distributed generation sources into AC (13.8 kV, 4.16 kV, 480 V, 208 V) 
 								and DC (1.5 kV, 380 V) microgrids in order to demonstrate and study novel power products, as well as monitoring, control and protection systems.</p>
 								<ul class="actions">
-													<li><a href="https://grid.pitt.edu/" class="button">Learn More</a></li>
+													<li><a href="https://grid.pitt.edu/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 												<h3>Pitt Center for Energy</h3>
 								<p>The University of Pittsburgh’s Center for Energy is a university-wide endeavor that leverages the energy-related expertise of approximately 100 faculty members across campus from multiple 
@@ -86,13 +86,13 @@
                              Established in 2008, the Center is a unifying entity for faculty members to collaborate with each other, regional energy industry leaders, government agencies, and the community to address the many challenges and opportunities
                               associated with the generation, transmission, and utilization of energy.</p>
 								<ul class="actions">
-													<li><a href="https://cfe.pitt.edu/" class="button">Learn More</a></li>
+													<li><a href="https://cfe.pitt.edu/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 								<h3>CMU Scott Institute for Energy</h3>
 								<p>The Wilton E. Scott Institute for Energy Innovation is a university-wide research initiative at CMU focused on improving energy efficiency and developing new, clean, affordable and sustainable energy sources. The institute was created through a lead gift from CMU alumni Sherman Scott, president and founder of Delmar Systems, and his wife Joyce Bowie Scott. The institute is named after Sherman Scott’s father, Wilton, and is located in Sherman and Joyce Bowie Scott Hall, on CMU’s Pittsburgh campus.
                                    Using Carnegie Mellon’s expertise in integrated systems, problem-solving, and an understanding of the intersection of energy and public policy, the work of the institute concentrates on energy efficiencies and reliability, as well as smart operations, materials and processes.</p>
 								<ul class="actions">
-													<li><a href="https://cfe.pitt.edu/" class="button">Learn More</a></li>
+													<li><a href="https://cfe.pitt.edu/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 												<h3>NCSU, FREEDM Center</h3>
 								<p>The modern human depends on an ever-updating array of electronic devices: smartphones, smart televisions, smart thermostats, computers, even electric cars.
@@ -101,13 +101,13 @@
                                  At the FREEDM Center, we’re building the internet of energy: a network of distributed energy resources that intelligently manages power using secure communications and advanced power electronics. Our research priorities include power electronics packaging, controls theory, solid state transformers, fault isolation devices, and power systems simulation and demonstration.
                                   FREEDM INNOVATIONS</p>
 								<ul class="actions">
-													<li><a href="https://www.freedm.ncsu.edu/" class="button">Learn More</a></li>
+													<li><a href="https://www.freedm.ncsu.edu/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 															<h3>NCSU, Power America Center</h3>
 								<p>The PowerAmerica Institute at N.C. State University was founded in 2015 and is one of 14 Manufacturing US Institutes nationwide. Each institute is narrowly focused on growing a sector of advanced manufacturing, thus making the U.S. better poised to complete economically on a global scale. PowerAmerica is backed by $70 million in funding from the Department of energy, with matching funds from industry partners and the State of North Carolina.
                                   Our mission is to save energy and create U.S. manufacturing jobs by accelerating the development and large-scale adoption of wide bandgap semiconductor technology made with silicon carbide and gallium nitride in power electronics systems.</p>
 								<ul class="actions">
-													<li><a href="https://poweramericainstitute.org/about-poweramerica/" class="button">Learn More</a></li>
+													<li><a href="https://poweramericainstitute.org/about-poweramerica/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 							</section>
 
