--- a/Industry-Advisors.html
+++ b/Industry-Advisors.html
@@ -176,8 +176,13 @@
 								</header>
 				            <a href="https://www.linkedin.com/in/stan-atcitty-99899a/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></p>
 							 <hr/>
+							 <header>
+							 <h4>Amit Pandey</h4>
+									<p>Research Scientist Stf., ATC Lockheed Martin Space 	
+								</header>
+				            <a href="https://www.linkedin.com/in/amitpandey02/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></p>
 							</section>
-
+                            <hr/>
 					</div>
 				</div>
 
