--- a/Amped-products.html
+++ b/Amped-products.html
@@ -70,7 +70,7 @@
 
 						<!-- Content -->
 							<section id="content">
-								
+								<h4><a href="https://www.sciencedirect.com/science/article/pii/S0925838821009099?via=ihub" target="_blank">“Review on soft magnetic metal and inorganic oxide nanocomposites for  power applications”</a><i>, Journal of Alloys and Compounds, A. Talaat, M.V. Suraj, K. Byerly, A. Wang, Y. Wang, J.K. Lee, P.R. Ohodnicki Jr, 2021</i></h4>
 							
 								<h4><a href="https://www.eventscribe.com/2020/apec-conf/fsPopup.asp?Mode=presenterInfo&PresenterID=814359" target="_blank">“Medium / High Power and Medium Frequency Magnetics: Materials / Manufacturing, Characterization, and Modeling / Design Methods”</a><i>, APEC 2020 Tutorial, Prof. Paul Ohodnicki.</i></h4>
 								<h4><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925838820328449" target="_blank">“Electromagnetic Assisted Thermal Processing of Amorphous and Nanocrystalline Soft Magnetic Alloys: Fundamentals and Advances”</a><i>
