--- a/PITT-Faculty.html
+++ b/PITT-Faculty.html
@@ -107,7 +107,7 @@
 							<p>AMPED Faculty Co-Director (Pitt)<br> Assistant Professor, Electrical & Computer Engineering
 							<br> Associate Director, Energy GRID Institute / Power Program</p>
 						</header>
-												<img style="WIDTH:250px; HEIGHT:360px" src="images/Grainger_new.jpg" alt="" class="center">
+												<img style="WIDTH:250px; HEIGHT:360px" src="images/GraingerN.JPG" alt="" class="center">
 
 						<section id="content">
 								
