--- a/Equipment-suppliers.html
+++ b/Equipment-suppliers.html
@@ -55,7 +55,7 @@
 									<a href="#">Education<a>
 										<ul>
 											<li><a href="Courses-and-academic-programs.html">Courses & Academic Programs </a></li>
-											<li><a href="Upcoming-events.html">Upcoming Events </a></li>
+											<li><a href="Upcoming-events.html">Recent & Upcoming Events </a></li>
 									
 										</ul>
 									</li>
