--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<a href="#">Education<a>
 										<ul>
 											<li><a href="Courses-and-academic-programs.html">Courses & Academic Programs </a></li>
-											<li><a href="Amped-products.html">Upcoming Events </a></li>
+											<li><a href="Amped-products.html">Recent & Upcoming Events </a></li>
 									
 										</ul>
 									
