--- a/Industry-Advisors.html
+++ b/Industry-Advisors.html
@@ -183,6 +183,14 @@
 				            <a href="https://www.linkedin.com/in/amitpandey02/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></p>
 							</section>
                             <hr/>
+							 <hr/>
+							 <header>
+							 <h4>Bharadwaj Reddy Andapally</h4>
+									<p>, CBMM	
+								</header>
+				            <a href="https://www.linkedin.com/in/ir-bharadwaj-reddy-andapally-84090145/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></p>
+							</section>
+                            <hr/>
 					</div>
 				</div>
 
