--- a/Industry-Advisors.html
+++ b/Industry-Advisors.html
@@ -186,7 +186,7 @@
 							 <hr/>
 							 <header>
 							 <h4>Bharadwaj Reddy Andapally</h4>
-									<p>, CBMM	
+									<p>Technical Advisor for Nanocrystalline Soft Magnetic Material, CBMM	
 								</header>
 				            <a href="https://www.linkedin.com/in/ir-bharadwaj-reddy-andapally-84090145/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></p>
 							</section>
