news_page_added

--- a/Equipment-suppliers.html
+++ b/Equipment-suppliers.html
@@ -59,7 +59,7 @@
 									
 										</ul>
 									</li>
-						
+						<li><a href="News.html">News</a></li>
 						</ul>
 					</nav>
 				</header>
