--- a/Founding-Participants.html
+++ b/Founding-Participants.html
@@ -59,7 +59,7 @@
 									
 										</ul>
 									</li>
-						
+						<li><a href="News.html">News</a></li>
 						</ul>
 					</nav>
 				</header>
