--- a/Industry-Advisors.html
+++ b/Industry-Advisors.html
@@ -56,7 +56,7 @@
 									
 										</ul>
 									</li>
-						
+						<li><a href="News.html">News</a></li>
 						</ul>
 					</nav>
 				</header>
