--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
 										</ul>
 									
 									</li>
-									<li>
-							
-							</li>
+								<li><a href="News.html">News</a></li>
 						</ul>
 					</nav>
 				</header>
