--- a/Equipment-suppliers.html
+++ b/Equipment-suppliers.html
@@ -140,7 +140,7 @@
 											<hr/>
 								</div>
 								<div class="col-4 col-12-medium">
-									  <img src="images/keysight.png" alt="" style="width:150%">
+									  <img src="images/keysight2.png" alt="" style="width:150%">
 								</div>
 								<div class="col-4 col-12-medium">
 									<p></p>
