--- a/Courses-and-academic-programs.html
+++ b/Courses-and-academic-programs.html
@@ -70,15 +70,15 @@
 							<section id="content">
 								
 								
-								<h3>Course #1 , Course Name #1</h3>
+								<h3>ME 2061 , Reduced Order Modeling for Engineering</h3>
 								<p><b>Instructors:</b> Instructor/s
 								<br><b>Semester:</b> Term 
-								<br><b>Participants:</b>Universities</p>
+								<br><b>Participants:</b>University of Pittsburgh</p>
 
-								<h3>Course #2 , Course Name #2</h3>
+								<h3>ME 2063 , Data-Driven Modeling for Engineers</h3>
 								<p><b>Instructors:</b> Instructor/s
 								<br><b>Semester:</b> Term 
-								<br><b>Participants:</b>Universities</p>
+								<br><b>Participants:</b>University of Pittsburgh</p>
 
 
 								<h3>Course #3 , Course Name #3</h3>
