--- a/Affiliate-Faculty.html
+++ b/Affiliate-Faculty.html
@@ -77,8 +77,8 @@
 								<h3>Research interests</h3>
 					
 								<ol>
-									<li>Computational Fluid Dynamics and Heat Transfer</li>
-									<li>Flow Instability</li>
+									<li>On-the-fly Random Order Modeling of High-Dimensional PDE</li>
+									<li>Reduction of Sensor Multi-Dimensional Data</li>
 									<li>High Perfromance Computing</li>
 									<li>Multi-Fidelity Modeling</li>
 									<li>Multi-Physics Modeling</li>
