Section Naming Updates

--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
 					<li><a href="index.html">Home</a></li>
 
 					<li>
-						<a href="#">Faculty Leads<a>
+						<a href="#">Team<a>
 							<ul>
-								<li><a href="PITT-Faculty.html">Pitt and NETL</a></li>
-								<li><a href="Affiliate-Faculty.html">Faculty Affiliates</a></li>
+								<li><a href="Leadership.html">Pitt and NETL</a></li>
+								<li><a href="Faculty.html">Faculty Affiliates</a></li>
+								<li><a href="KeyResearchers.html">Key Researchers</a></li>
+								<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
 							</ul>
 					</li>
 					<li>
-						<a href="#">Industry Participants/Collaborators<a>
+						<a href="#">Industry Engagement<a>
 								<ul>
-									<li><a href="Industry-Advisors.html">Industry Advisors </a></li>
+									<li><a href="SteeringCommittee.html">Industry Advisors </a></li>
 								</ul>
 					</li>
 					<li>
