Added description of existing capabilities, ongoing projects, existing consortia
Added description of existing capabilities, ongoing projects, existing consortia

--- a/Related-initiatives.html
+++ b/Related-initiatives.html
@@ -73,22 +73,22 @@
 								<ul class="actions">
 													<li><a href="https://www.engineering.pitt.edu/upcam" class="button" target="_blank">Learn More</a></li>
 												</ul>
-												<h3>University of Pittsburgh Initiative #2</h3>
-								<p>Description</p>
+								<h3>Pittsburgh Quantum Institute</h3>
+								<p>A university and national laboratory collaborative center entitled Pittsburgh Quantum Institute (PQI) which places an emphasis on quantum science and engineering, spanning the natural sciences, engineering, and industry. </p>
 								<ul class="actions">
-													<li><a href="#" class="button" target="_blank">Learn More</a></li>
+													<li><a href="https://www.pqi.org/" class="button" target="_blank">Learn More</a></li>
 												</ul>
 
-								<h3>National Energy Technology Laboratory Initiative #1</h3>
-								<p>Description</p>
+								<h3>Advanced Magnetics for Power and Energy Development</h3>
+								<p>A new consortium entitled Advanced Magnetics for Power and Energy Development (AMPED), an innovation ecosystem and new educational programs for advancing soft magnetic materials and component technologies spanning fundamental science to end-use application. </p>
 								<ul class="actions">
-								<li><a href="#" class="button" target="_blank">Learn More</a></li>
+								<li><a href="https://pittamped.github.io/" class="button" target="_blank">Learn More</a></li>
 											</ul>
 
-								<h3>National Energy Technology Laboratory Initiative #2</h3>
-								<p>Description</p>
+								<h3>eXtremeMAT</h3>
+								<p>A multi-lab consortium focused on developing cross-cutting "tool sets" to accelerate the discovery and scale-up of new and enhanced materials for extreme environments and be scaled up for manufacturing in a cost-effective manner.</p>
 								<ul class="actions">
-								<li><a href="#" class="button" target="_blank">Learn More</a></li>
+								<li><a href="https://edx.netl.doe.gov/extrememat/" class="button" target="_blank">Learn More</a></li>
 											</ul>
 							</section>
 
