Spaces added for description, new page, updated header

--- a/Active-Research-Projects.html
+++ b/Active-Research-Projects.html
@@ -76,7 +76,7 @@
 					<h2>University Of Pittsburgh</h2>
 
 					<h3>UPitt REPAIR</h3>
-					<p><b>Description:</b>ARPAR-E funded Rapid Encapsulation of Pipelines Avoiding Intensive Replacement
+					<p><b>Description:</b> ARPAR-E funded Rapid Encapsulation of Pipelines Avoiding Intensive Replacement
 						(REPAIR) project at UPitt to develop in-situ repairs of pipelines and embedded intelligence. The
 						technology has value-added enhanced corrosion protection and embedded sensing to complement
 						existing non-destructive evaluation and in-line inspection techniques.
@@ -97,7 +97,7 @@
 					<h2>National Energy Technology Laboratory</h2>
 
 					<h3>Natural Gas Infrastructure FWP</h3>
-					<p><b>Description:</b>Sensor device and enabling materials are developed to enable increased
+					<p><b>Description:</b> Sensor device and enabling materials are developed to enable increased
 						reliability and resiliency of the natural gas infrastructure for safe and secure natural gas
 						transport and delivery while also improving operational efficiency and abating environmental
 						impacts from CH4 emission. Sensor technologies include advanced electrochemical sensor, optical
@@ -106,45 +106,33 @@
 
 
 					<h3>Advanced Sensors and Controls FWP</h3>
-					<p><b>Description:</b>Optical fiber and SAW devices and enabling material technologies are being
+					<p><b>Description:</b> Optical fiber and SAW devices and enabling material technologies are being
 						developed for high-temperature power plant applications.
 
 					<h3>Carbon Storage FWP</h3>
-					<p><b>Description:</b>Optical fiber-based CO2 sensors are being developed for monitoring of
+					<p><b>Description:</b> Optical fiber-based CO2 sensors are being developed for monitoring of
 						groundwater and geological sites for carbon sequestration.
 
 					<h3> United States (U.S.) Department of Energy (DOE) Grid Modernization Laboratory Consortium</h3>
-					<p><b>Description:</b>OFS are being developed and demonstrated for transformer, battery, and other
+					<p><b>Description:</b> OFS are being developed and demonstrated for transformer, battery, and other
 						electrical-asset monitoring applications.
 
 					<h3>Embedded Sensors for Wellbore Integrity Monitoring</h3>
-					<p><b>Description:</b>A suite of OFS and passive wireless-based sensors are being developed for
+					<p><b>Description:</b> A suite of OFS and passive wireless-based sensors are being developed for
 						monitoring wellbore integrity conditions with a focus on chemical sensing (e.g. pH and
 						corrosivity).
 
 					<h3>Hydrogen Subsurface Storage FWP</h3>
-					<p><b>Description:</b>A suite of sensor technologies will be developed for real-time monitoring of
+					<p><b>Description:</b> A suite of sensor technologies will be developed for real-time monitoring of
 						microbial conversion in methane-hydrogen blend, gas composition, and geochemical parameters
 						(e.g. pH) in the H2 storage wells, as well as wellbore integrity monitoring for H2 subsurface
 						storage, including physical (e.g. temperature, stress, acoustic, vibration) and chemical (e.g.
 						pH, corrosion, gas) parameters for cement and casing steel structural health monitoring.
 
 					<h3>Onshore Unconventional Resources FWP</h3>
-					<p><b>Description:</b>Develop an integrated network of sensor technologies for real-time monitoring
+					<p><b>Description:</b> Develop an integrated network of sensor technologies for real-time monitoring
 						of plugged abandoned well integrity to ensure effective and secure plugging and geologic zonal
-						isolation.[AA1] 
-
-
-
-
-
-
-
-
-
-
-
-
+						isolation.
 
 				</section>
 
