--- a/Upcoming-events.html
+++ b/Upcoming-events.html
@@ -27,22 +27,25 @@
 					<li><a href="index.html">Home</a></li>
 
 					<li>
-						<a href="#">Faculty Leads<a>
-								<ul>
-									<li><a href="PITT-Faculty.html">Pitt and NETL</a></li>
-									<li><a href="Affiliate-Faculty.html">Faculty Affiliates</a></li>
-								</ul>
+						<a href="#">Team<a>
+							<ul>
+								<li><a href="Leadership.html">Leadership</a></li>
+								<li><a href="Faculty.html">Faculty Affiliates</a></li>
+								<li><a href="KeyResearchers.html">Key Researchers</a></li>
+								<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
+							</ul>
 					</li>
 					<li>
-						<a href="#">Industry Participants/Collaborators<a>
+						<a href="#">Industry Engagement<a>
 								<ul>
-									<li><a href="Industry-Advisors.html">Industry Advisors </a></li>
+									<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 								</ul>
 					</li>
 					<li>
 						<a href="#">Research<a>
 								<ul>
-									<li><a href="Active-Research-Projects.html">Active research projects </a></li>
+									<li><a href="Active-Research-Projects.html">Active Research Projects </a></li>
+									<li><a href="Capabilities">Capabilities </a></li>
 									<li><a href="UPittISC-products.html">UPittISC Products </a></li>
 									<li><a href="Related-initiatives.html">Related Initiatives </a></li>
 								</ul>
