--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<li>
 						<a href="#">Team<a>
 							<ul>
-								<li><a href="Leadership.html">Pitt and NETL</a></li>
+								<li><a href="Leadership.html">Leadership</a></li>
 								<li><a href="Faculty.html">Faculty Affiliates</a></li>
 								<li><a href="KeyResearchers.html">Key Researchers</a></li>
 								<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
@@ -38,13 +38,14 @@
 					<li>
 						<a href="#">Industry Engagement<a>
 								<ul>
-									<li><a href="SteeringCommittee.html">Industry Advisors </a></li>
+									<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 								</ul>
 					</li>
 					<li>
 						<a href="#">Research<a>
 								<ul>
-									<li><a href="Active-Research-Projects.html">Active research projects </a></li>
+									<li><a href="Active-Research-Projects.html">Active Research Projects </a></li>
+									<li><a href="Capabilities">Capabilities </a></li>
 									<li><a href="UPittISC-products.html">UPittISC Products </a></li>
 									<li><a href="Related-initiatives.html">Related Initiatives </a></li>
 								</ul>
