--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -66,8 +66,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>The Industry Advisory Group</h2>
-							<p>The industry advisory group members are prominent scientists and leaders that were selected to represent key segments and application areas of critical importance to the 
+							<h2>Steering Committee</h2>
+							<p>The steering committee is a group prominent scientists and leaders that were selected to represent key segments and application areas of critical importance to the 
                                UPittISC consortium objectives.  The advisory group provides the faculty leadership team with insights about
                                emerging needs and trends within relevant industries and across the various agencies.  
                                An updated list of the current advisory group members and their organizational affiliation are listed below:</p>
