--- a/Capabilities.html
+++ b/Capabilities.html
@@ -70,7 +70,7 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Active Research Projects</h2>
+					<h2>Capabilities</h2>
 
 				</header>
 
