--- a/Active-Research-Projects.html
+++ b/Active-Research-Projects.html
@@ -28,12 +28,12 @@
 
 					<li>
 						<a href="#">Team<a>
-							<ul>
-								<li><a href="Leadership.html">Leadership</a></li>
-								<li><a href="Faculty.html">Faculty Affiliates</a></li>
-								<li><a href="KeyResearchers.html">Key Researchers</a></li>
-								<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
-							</ul>
+								<ul>
+									<li><a href="Leadership.html">Leadership</a></li>
+									<li><a href="Faculty.html">Faculty Affiliates</a></li>
+									<li><a href="KeyResearchers.html">Key Researchers</a></li>
+									<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
+								</ul>
 					</li>
 					<li>
 						<a href="#">Industry Engagement<a>
@@ -79,13 +79,16 @@
 
 					<h2>University Of Pittsburgh</h2>
 
-					<h3>UPitt REPAIR</h3>
-					<p><b>Description:</b> ARPAR-E funded Rapid Encapsulation of Pipelines Avoiding Intensive Replacement
+
+					<h3><a href="https://arpa-e.energy.gov/technologies/projects/innervated-pipelines-new-technology-platform-situ-repair-and-embedded" target="_blank">UPitt Repair</a></h3>
+					<p><b>Description:</b> ARPAR-E funded Rapid Encapsulation of Pipelines Avoiding Intensive
+						Replacement
 						(REPAIR) project at UPitt to develop in-situ repairs of pipelines and embedded intelligence. The
 						technology has value-added enhanced corrosion protection and embedded sensing to complement
 						existing non-destructive evaluation and in-line inspection techniques.
 
-					<h3>UPitt Nuclear Energy University Program</h3>
+
+					<h3><a href="https://www.engineering.pitt.edu/programs/nuclear/nuclear/" target="_blank">UPitt Nuclear Energy University Program</a></h3>
 					<p><b>Description:</b> Optical fiber and acoustic nondestructive evaluation (NDE) sensor
 						technologies are being explored for dry cask storage monitoring applications by combining with
 						advanced artificial intelligence and machine learning methods and physics-based models.
@@ -100,7 +103,8 @@
 
 					<h2>National Energy Technology Laboratory</h2>
 
-					<h3>Natural Gas Infrastructure FWP</h3>
+
+					<h3><a href="https://netl.doe.gov/oil-gas/ngi" target="_blank">Natural Gas Infrastructure FWP</a></h3>
 					<p><b>Description:</b> Sensor device and enabling materials are developed to enable increased
 						reliability and resiliency of the natural gas infrastructure for safe and secure natural gas
 						transport and delivery while also improving operational efficiency and abating environmental
@@ -108,32 +112,34 @@
 						fiber-based sensors (OFS), and passive wireless SAW-based sensors, with emphasis on internal
 						corrosion monitoring and external CH4 leak detection.
 
-
-					<h3>Advanced Sensors and Controls FWP</h3>
+					<h3><a href="https://netl.doe.gov/sites/default/files/netl-file/20VPRSC_Chorpening.pdf" target="_blank">Advanced Sensors and Controls FWP</a></h3>
 					<p><b>Description:</b> Optical fiber and SAW devices and enabling material technologies are being
 						developed for high-temperature power plant applications.
 
-					<h3>Carbon Storage FWP</h3>
+
+					<h3><a href="https://netl.doe.gov/carbon-management/carbon-storage" target="_blank">Carbon Storage FWP</a></h3>
 					<p><b>Description:</b> Optical fiber-based CO2 sensors are being developed for monitoring of
 						groundwater and geological sites for carbon sequestration.
 
-					<h3> United States (U.S.) Department of Energy (DOE) Grid Modernization Laboratory Consortium</h3>
+
+					<h3><a href="https://www.energy.gov/gmi/grid-modernization-lab-consortium" target="_blank"> United States (U.S.) Department of Energy (DOE) Grid Modernization Laboratory Consortium</a></h3>
 					<p><b>Description:</b> OFS are being developed and demonstrated for transformer, battery, and other
 						electrical-asset monitoring applications.
 
-					<h3>Embedded Sensors for Wellbore Integrity Monitoring</h3>
+
+					<h3><a href="https://netl.doe.gov/sites/default/files/netl-file/Embedded-Sensor-Technology-Suite-for-Wellbore-Integrity-Monitoring-Ohodnicki-Poster.pdf" target="_blank">Embedded Sensors for Wellbore Integrity Monitoring</a></h3>
 					<p><b>Description:</b> A suite of OFS and passive wireless-based sensors are being developed for
 						monitoring wellbore integrity conditions with a focus on chemical sensing (e.g. pH and
 						corrosivity).
 
-					<h3>Hydrogen Subsurface Storage FWP</h3>
+					<h3><a href="https://netl.doe.gov/projects/VueConnection/download.aspx?id=92b52d3e-acbc-4d1d-bd35-9492f179bf8a&filename=SubsurfaceHydrogenandNaturalGasStorageStateofKnowledgeandResearchRecommendationsReport_041122.pdf" target="_blank">Hydrogen Subsurface Storage FWP</a></h3>
 					<p><b>Description:</b> A suite of sensor technologies will be developed for real-time monitoring of
 						microbial conversion in methane-hydrogen blend, gas composition, and geochemical parameters
 						(e.g. pH) in the H2 storage wells, as well as wellbore integrity monitoring for H2 subsurface
 						storage, including physical (e.g. temperature, stress, acoustic, vibration) and chemical (e.g.
 						pH, corrosion, gas) parameters for cement and casing steel structural health monitoring.
 
-					<h3>Onshore Unconventional Resources FWP</h3>
+					<h3><a href="https://netl.doe.gov/sites/default/files/rdfactsheet/R-D166.pdf" target="_blank">Onshore Unconventional Resources FWP</a></h3>
 					<p><b>Description:</b> Develop an integrated network of sensor technologies for real-time monitoring
 						of plugged abandoned well integrity to ensure effective and secure plugging and geologic zonal
 						isolation.
