--- a/Capabilities.html
+++ b/Capabilities.html
@@ -28,12 +28,12 @@
 
 					<li>
 						<a href="#">Team<a>
-							<ul>
-								<li><a href="Leadership.html">Leadership</a></li>
-								<li><a href="Faculty.html">Faculty Affiliates</a></li>
-								<li><a href="KeyResearchers.html">Key Researchers</a></li>
-								<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
-							</ul>
+								<ul>
+									<li><a href="Leadership.html">Leadership</a></li>
+									<li><a href="Faculty.html">Faculty Affiliates</a></li>
+									<li><a href="KeyResearchers.html">Key Researchers</a></li>
+									<li><a href="PartnershipContacts.html">Partnership Contacts</a></li>
+								</ul>
 					</li>
 					<li>
 						<a href="#">Industry Engagement<a>
@@ -77,43 +77,55 @@
 				<!-- Content -->
 				<section id="content">
 
-					<h2>University Of Pittsburgh</h2>
+					<h2>National Energy Technology Laboratory</h2>
 
-					<h3>Advanced Sensor Development Laboratory</h3>
+
+					<h3><a href="https://netl.doe.gov/carbon-management/sensors-and-controls" target="_blank">Advanced
+							Sensor Development Laboratory</a></h3>
 					<p><b>Description:</b> State-of-the-art test equipment and multiple years’ expertise have been
 						established at NETL R&IC for optical fiber sensor and wireless SAW sensor fabrication,
 						interrogation, and chemical sensor layer synthesis. A reel-to-reel system and electroless
 						plating system can demonstrate scalability of coating procedures for fiber sensors.
 
 
-					<h3>Center for Advanced Functional Materials Design</h3>
+
+					<h3><a href="https://netl.doe.gov/onsite-research/materials" target="_blank">Center for Advanced
+							Functional Materials Design</a></h3>
 					<p><b>Description:</b> NETL has a suite of advanced material laboratories for facilitating the
 						syntheses/characterization of polymer and metal-organic framework (MOF) components, oxides and
 						inorganic materials, metallic thin films, and other functional sensing layers to be leveraged
 						for sensing material development and demonstration.
 
 
-
-					<h3>Distributed Optical Interrogator Development Program</h3>
+					<h3><a href="https://netl.doe.gov/node/5688" target="_blank">Distributed Optical Interrogator
+							Development Program</a></h3>
 					<p><b>Description:</b> NETL has established a program to develop customized low-cost optical
 						interrogators for structural health monitoring applications and to measure leakage and corrosion
 						over a long-distance pipeline to aid in failure prediction and analysis. 
 
 
-					<h3>Subsurface Sensor Development Laboratory</h3>
+
+					<h3><a href="https://netl.doe.gov/node/4172" target="_blank">Subsurface Sensor Development
+							Laboratory</a></h3>
 					<p><b>Description:</b> An automated HTHP system is built to simulate wellbore conditions for sensor
 						development and materials durability testing. This system includes two batch reactors (500 mL
 						and 1 L autoclaves) and one flow-through reactor. The HTHP reactors are rated up to 450°C and
 						6,500 psi, and currently are permitted to inject and hold both brine solutions and gas of CH4,
 						CO2, air, N2, and H2S.
 
-					<h3>Electromagnetic Property Characterization and Testing Laboratory</h3>
+					<h3><a href="https://netl.doe.gov/node/4183" target="_blank">Electromagnetic Property
+							Characterization and Testing Laboratory</a></h3>
 					<p><b>Description:</b> Facilities for characterizing electromagnetic properties of functional
 						materials and devices, ranging from direct current to microwave and optical frequencies,
 						including spectrophotometry, network analyzers, impedance analyzers, magnetometers, and physical
 						property measurement systems.
 
-					<h3>Petersen Nanofabrication and Characterization Facility</h3>
+
+
+					<h2>University of PIttsburgh</h2>
+
+
+					<h3><a href="http://www.nano.pitt.edu/" target="_blank">Petersen Nanofabrication and Characterization Facility</a></h3>
 					<p><b>Description:</b> Facilities for nanofabrication of sensor devices including patterning,
 						lithography, and thin film deposition as well as detailed characterization of functional sensor
 						materials as well as fabricated sensor devices.  Facilities including sputtering, atomic layer
@@ -121,14 +133,13 @@
 						microscopy, ellipsometry, and a range of spectroscopy tools and techniques.
 
 
-
-
-					<h3>Magnetic, Electronic, and Photonic Materials and Device Laboratory</h3>
+					<h3><a href="https://www.engineering.pitt.edu/subsites/Labs/mepmdl/mepmdl/" target="_blank">Magnetic, Electronic, and Photonic Materials and Device Laboratory</a></h3>
 					<p><b>Description:</b> Facilities for fabricating optical fiber and passive wireless sensor
 						technologies and interrogation / telemetry techniques as well as sensor device testing and
 						sensor material fabrication and characterization.
 
-					<h3>Single Crystal Fiber Fabrication and Characterization Facilities</h3>
+			
+					<h3><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11739/1173903/Fabrication-and-application-of-single-crystal-fiber-via-laser-heated/10.1117/12.2586173.short?SSO=1" target="_blank">Single Crystal Fiber Fabrication and Characterization Facilities</a></h3>
 					<p><b>Description:</b> Facilities for fabricating and characterizing single crystal optical fibers
 						using Laser Heated Pedestal Growth systems capable of extreme temperature and environment
 						operation as well as novel functionality.
